<resources>
    <string name="app_name">hrbs</string>
    <string name="click_me">Click Me</string>
    <string name="home">home</string>
    <string name="query">Query</string>
    <string name="profile">profile</string>
    <string name="hostels">Hostels</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="already_have_an_account_login">Already Have An Account? Login</string>
    <string name="entire_sapphire">Entire Sapphire</string>
    <string name="stext">Entire Sapphire Hostel</string>
    <string name="amenites">Amenites</string>
    <string name="description">The Sapphire Hostel enforces strict rules, including no drinking, no smoking, and no day scholars or external visitors, such as girls, being allowed inside. Electronic items are also prohibited. These rules help maintain discipline and ensure a focused and secure environment for all residents.</string>
    <string name="ameneties">Ameneties</string>
    <string name="four_cot">Four Cot</string>
    <string name="single_cot">Single Cot</string>
    <string name="non_ac">Non Ac</string>
    <string name="ac">Ac</string>
    <string name="badmintoncourt">BadmintonCourt</string>
    <string name="indoorgames">IndoorGames</string>
    <string name="tv">TV</string>
    <string name="etext">Entire Emerald Hostel</string>
    <string name="ctext">Entire Coral Hostel</string>
    <string name="ptext">Entire Pearl Hostel</string>
    <string name="rtext">Entire Ruby Hostel</string>
    <string name="wi_fi">Wi-fi</string>
    <string name="description_sapphire2">Image of Sapphire room</string>
    <string name="don_t_have_an_account_signup">Don\'t Have An Account? SignUP</string>
    <string name="book">Book</string>
    <string name="rooms">Rooms</string>
    <string-array name="hostelissues">
        <item>Wifi</item>
        <item>Gym</item>
        <item>Students Centre</item>
    </string-array>
</resources>